<resources>
    <string name="app_name">Coffee Cafe</string>
    <string name="how_many_cups">How many cups?</string>
    <string name="calculate">Calculate</string>
    <string name="large_12">Large ($12)</string>
    <string name="what_size_you_would_prefer">What Size you would prefer ?</string>
    <string name="medium_8">Medium ($8)</string>
    <string name="include_tip">Include Tip $1</string>
    <string name="cost">Bill Amount : %s</string>
    <string name="small_5">Small ($5)</string>
    <string name="coffee_cafe_nactore_organization">Coffee Cafe | NACTORE Organization</string>
</resources>